<resources>
	<string name="app_name">Secret Pad</string>
	<string name="app_version">Version %s</string>
	<string name="app_copyright">\u00A9 Copyright 2018 SEA9.ORG</string>
	<string name="app_license">
Secret Pad is a free software, and is released under the GNU GPLv2 license.\n
This program is distributed WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
    </string>
	<string name="app_author">paul@sea9.org</string>
	<string name="action_import">Import Notes</string>
	<string name="action_export">Export Notes</string>
	<string name="action_passwd">Change Password</string>
	<string name="action_sort_key">Sort By Key</string>
	<string name="action_sort_tag">Sort By Tags</string>
	<string name="action_about">About</string>
	<string name="action_cleanup">Clean-up Tags</string>
	<string name="value_details">Note details [%s]</string>
	<string name="value_details_new">add</string>
	<string name="value_details_edit">edit</string>
	<string name="value_export">SecretPad3Export</string>
	<string name="hint_password">Password</string>
	<string name="hint_confirm">Confirm Password</string>
	<string name="hint_old_password">Old Password</string>
	<string name="hint_search">Search notes</string>
	<string name="hint_content">Content</string>
	<string name="hint_key">Name</string>
	<string name="hint_tag">Tag</string>
	<string name="hint_files">File</string>
	<string name="hint_directory">Directory</string>
	<string name="hint_current_dir">Current Directory</string>
	<string name="btn_logon">Logon</string>
	<string name="btn_okay">Okay</string>
	<string name="btn_cancel">Cancel</string>
	<string name="ctn_save">Save</string>
	<string name="ctn_cancel">Cancel</string>
	<string name="ctn_add">Add</string>
	<string name="msg_passwd_first">Enter a new master password</string>
	<string name="msg_passwd_needed">Please provide a password</string>
	<string name="msg_passwd_mismatch">Password mismatched</string>
	<string name="msg_passwd_simple">Password must be at least 8 characters long, with at lease one upper case, lower case, numeric and symbol character each respectively</string>
	<string name="msg_passwd_current">Please provide the current password</string>
	<string name="msg_passwd_changed">Password changed successfully</string>
	<string name="msg_passwd_change_failed">Failed to change password</string>
	<string name="msg_insert_okay">Note \'%s\' inserted successfully</string>
	<string name="msg_insert_fail">Insert note failed</string>
	<string name="msg_insert_duplicated">Note already exists</string>
	<string name="msg_update_okay">Note \'%s\' updated successfully</string>
	<string name="msg_update_fail">Update note \'%s\' failed</string>
	<string name="msg_update_error">Update note failed</string>
	<string name="msg_delete_okay">Note \'%s\' deleted successfully</string>
	<string name="msg_delete_fail">Delete note \'%s\' failed</string>
	<string name="msg_delete_error">Delete note failed</string>
	<string name="msg_discard_changes">Confirm to discard changes?</string>
	<string name="msg_confirm_delete">Confirm to delete note \'%s\'?</string>
	<string name="msg_confirm_delete_tags">Confirm to delete unused tags?</string>
	<string name="msg_confirm_export">Confirm to export notes?</string>
	<string name="msg_confirm_passwd">Confirm to change password?</string>
	<string name="msg_delete_tags_okay">%s unused tags deleted successfully</string>
	<string name="msg_delete_tags_fail">Delete unused tags failed</string>
	<string name="msg_delete_tags_cancel">Delete unused tags Cancelled</string>
	<string name="msg_filter_active">Function disabled, filter is active</string>
	<string name="msg_not_logon">Not yet logon</string>
	<string name="msg_logon_fail">Logon failed: %s</string>
	<string name="msg_system_busy">System busy, please wait…</string>
	<string name="msg_migrate_logon">Please enter the password of the old version Secret Pad</string>
	<string name="msg_migrate_okay">%1$d note%3$s migrated successfully from %2$s</string>
	<string name="msg_migrate_fail">Migrating notes from %s failed (%d): %s</string>
	<string name="msg_migrate_error">Migrating %s error: %s</string>
	<string name="msg_migrate_invalid">Migrating notes from %s failed, invalid data file format at row %d</string>
	<string name="msg_migrate_smart">Attempt to split old contents into separate notes base on format hints</string>
	<string name="msg_import_okay">%1$d note%3$s imported successfully from %2%s</string>
	<string name="msg_import_fail">Importing notes from %s failed (%d): %s</string>
	<string name="msg_import_error">Importing %s error: %s</string>
	<string name="msg_export_okay">%1$d note%3$s exported successfully to %2$s</string>
	<string name="msg_export_fail">Exporting %s to %s failed (%d)</string>
	<string name="msg_export_error">Exporting notes failed (%d)</string>
	<string name="msg_empty_key">The note\'s key value cannot be empty</string>
</resources>
