<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="org.sea9.android.secret.core.MainActivity">

	<item
		android:id="@+id/action_cleanup"
		android:orderInCategory="100"
		android:title="@string/action_cleanup"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_import"
		android:orderInCategory="200"
		android:title="@string/action_import"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_export"
		android:orderInCategory="300"
		android:title="@string/action_export"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_passwd"
		android:orderInCategory="400"
		android:title="@string/action_passwd"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_sort"
		android:orderInCategory="500"
		android:title="@string/action_sort"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_about"
		android:orderInCategory="600"
		android:title="@string/action_about"
		app:showAsAction="never" />

	<item android:id="@+id/menu_search"
		android:title="@string/hint_search"
		app:showAsAction="ifRoom"
		app:actionViewClass="android.widget.SearchView" />
</menu>