<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:minWidth="@dimen/dialog_minWidth"
	android:paddingTop="0dp"
	android:paddingLeft="0dp"
	android:paddingRight="0dp"
	android:paddingBottom="0dp"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="@dimen/row_height"
		android:paddingBottom="@dimen/margin_normal"
		android:paddingEnd="@dimen/margin_normal"
		android:paddingStart="@dimen/margin_normal"
		android:paddingTop="@dimen/margin_narrow"
		android:textSize="@dimen/text_title"
		android:background="@color/colorTitleBar"
		android:text="@string/msg_passwd_first"/>

	<EditText
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:layout_marginLeft="@dimen/margin_narrow"
		android:layout_marginRight="@dimen/margin_narrow"
		android:ems="10"
		android:hint="@string/hint_password"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		android:imeOptions="actionNext">
		<requestFocus />
	</EditText>

	<EditText
		android:id="@+id/confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:layout_marginLeft="@dimen/margin_narrow"
		android:layout_marginRight="@dimen/margin_narrow"
		android:ems="10"
		android:hint="@string/hint_confirm"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		android:imeOptions="actionDone" />

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:layout_marginLeft="@dimen/margin_narrow"
		android:layout_marginRight="@dimen/margin_narrow"
		android:layout_marginBottom="@dimen/fab_margin"
		android:contentDescription="@string/app_name"
		android:src="@drawable/logo" />

	<Button
		android:id="@+id/logon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="@dimen/fab_margin"
		android:layout_marginBottom="@dimen/margin_normal"
		android:background="?android:attr/selectableItemBackground"
		android:text="@string/btn_logon" />
</LinearLayout>