<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:minWidth="@dimen/dialog_minWidth"
	android:paddingTop="@dimen/margin_narrow"
	android:paddingLeft="@dimen/margin_narrow"
	android:paddingRight="@dimen/margin_narrow"
	android:paddingBottom="@dimen/margin_normal"
	android:orientation="vertical">

	<EditText
		android:id="@+id/old_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:layout_marginBottom="@dimen/fab_margin"
		android:ems="10"
		android:hint="@string/hint_old_password"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		android:imeOptions="actionNext">
		<requestFocus />
	</EditText>

	<EditText
		android:id="@+id/new_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:ems="10"
		android:hint="@string/hint_password"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		android:imeOptions="actionNext" />

	<EditText
		android:id="@+id/new_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:ems="10"
		android:hint="@string/hint_confirm"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		android:imeOptions="actionDone" />

	<Button
		android:id="@+id/logon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="@dimen/fab_margin"
		android:background="?android:attr/selectableItemBackground"
		android:text="@string/btn_okay" />
</LinearLayout>