<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:minWidth="@dimen/dialog_minWidth"
	android:paddingTop="@dimen/margin_narrow"
	android:paddingLeft="@dimen/margin_narrow"
	android:paddingRight="@dimen/margin_narrow"
	android:paddingBottom="@dimen/margin_normal"
	android:background="@color/colorDialog"
	android:orientation="vertical">

	<EditText
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:ems="10"
		android:hint="@string/hint_password"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		android:imeOptions="actionDone">
		<requestFocus />
	</EditText>

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fab_margin"
		android:contentDescription="@string/app_name"
		android:src="@drawable/logo" />

	<Button
		android:id="@+id/logon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="@dimen/fab_margin"
		android:text="@string/btn_logon" />
</LinearLayout>