<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/colorDialog"
	android:focusable="true"
	android:focusableInTouchMode="true">

	<EditText
		android:id="@+id/edit_key"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/hint_key"
		android:inputType="textCapSentences"
		android:textSize="@dimen/text_normal"
		app:layout_constraintEnd_toStartOf="@+id/edit_tag"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/edit_content"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:ems="10"
		android:gravity="top"
		android:hint="@string/hint_content"
		android:inputType="textMultiLine"
		android:lines="7"
		android:textSize="@dimen/text_normal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/edit_tags"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/edit_key" />

	<EditText
		android:id="@+id/edit_tag"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:ems="10"
		android:hint="@string/hint_tag"
		android:inputType="textPersonName"
		android:textSize="@dimen/text_medium"
		app:layout_constraintBaseline_toBaselineOf="@+id/edit_key"
		app:layout_constraintEnd_toStartOf="@+id/tag_add"
		app:layout_constraintStart_toEndOf="@+id/divider_v" />

	<ImageButton
		android:id="@+id/tag_add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="2dp"
		android:contentDescription="@string/ctn_add"
		android:minWidth="0dp"
		android:minHeight="0dp"
		android:padding="0dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@android:drawable/ic_input_add" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/edit_tags"
		android:layout_width="100dp"
		android:layout_height="0dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="4dp"
		app:layout_constraintBottom_toTopOf="@+id/dtl_save"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/edit_tag" />

	<ImageButton
		android:id="@+id/dtl_save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="4dp"
		android:contentDescription="@string/ctn_save"
		android:minWidth="0dp"
		android:minHeight="0dp"
		android:padding="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/dtl_cancel"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toEndOf="@+id/divider_v"
		app:srcCompat="@android:drawable/ic_menu_save" />

	<ImageButton
		android:id="@+id/dtl_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="4dp"
		android:contentDescription="@string/ctn_cancel"
		android:minWidth="0dp"
		android:minHeight="0dp"
		android:padding="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/dtl_save"
		app:srcCompat="@android:drawable/ic_delete" />

	<View
		android:id="@+id/divider_v"
		android:layout_width="1dp"
		android:layout_height="300dp"
		android:background="@android:color/darker_gray"
		app:layout_constraintBottom_toTopOf="@+id/divider_b"
		app:layout_constraintStart_toEndOf="@+id/edit_content" />

	<View
		android:id="@+id/divider_h"
		android:layout_width="250dp"
		android:layout_height="1dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintEnd_toStartOf="@+id/edit_tag"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/edit_key" />

	<View
		android:id="@+id/divider_b"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/edit_content"
		app:layout_constraintTop_toTopOf="@+id/dtl_cancel" />

</android.support.constraint.ConstraintLayout>